k8s/03-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app
  namespace: platform-lab

spec:
  replicas: 2

  selector:
    matchLabels:
      app: platform-app

  template:
    metadata:
      labels:
        app: platform-app

    spec:
      containers:
        - name: app
          image: ghcr.io/maackia/container-platform-lab-app:0.2.0
          imagePullPolicy: IfNotPresent
          
          ports:
            - name: http
              containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 5

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
