k8s/08-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: db
  namespace: platform-lab

spec:
  serviceName: db
  replicas: 1

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine

          ports:
            - name: postgres
              containerPort: 5432

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data

            - name: db-init
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
              readOnly: true

      volumes:
        - name: db-init
          configMap:
            name: db-init

  volumeClaimTemplates:
     - metadata:
        name: db-data

       spec:
        accessModes:
          - ReadWriteOnce
          
        storageClassName: local-path

        resources:
          requests:
            storage: 2Gi
