k8s/02-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: platform-lab
spec:
  type: NodePort

  selector:
    app: nginx

  ports:  #Ubuntu VM:30080 -> nginx Service:80 -> nginx Pod:80
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
