k8s/07-db-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: db
  namespace: platform-lab

spec:
  clusterIP: None

  selector:
    app: db

  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
