k8s/09-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app
  namespace: platform-lab

spec:
  ingressClassName: traefik

  rules:
    - host: app.platform.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: app

                port:
                  number: 3000
